relm4-macros/tests/ui/compile-fail/component-no-view.rs
struct TestComponent;

#[relm4_macros::component]
impl Component for TestComponent {
    view! {
        gtk::Window {

        }
    }
}

fn main() {}
